--- a/src/app/spotbie/map/info-object/info-object.component.html
+++ b/src/app/spotbie/map/info-object/info-object.component.html
@@ -95,6 +95,6 @@
 
     </div>
 
-    <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+    <div class="spotbie-close-button" (click)="closeWindowX()">close</div>
 
 </div>
