--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -17,7 +17,7 @@
       <div class='spotbie-marker-bg'
           *ngIf="iconUrl"
           [ngStyle]="{'background' : 'url(' + iconUrl + ')',                      
-                      'border' : '4px solid ' + bg_color }">
+                      'border' : '2px solid ' + bg_color }">
       </div>
           
     </agm-overlay>
@@ -47,7 +47,7 @@
               (click)="pullMarker(mapObject)"
               title="{{ mapObject.username }}"
               [ngStyle]="{'background' : 'url(' + mapObject.map_icon + ')',
-                          'border' : '4px solid ' + mapObject.bg_color }">
+                          'border' : '2px solid ' + mapObject.bg_color }">
         </div>
 
       </agm-overlay>  
@@ -80,7 +80,7 @@
 
 </div>
 
-<app-info-object [info_object]="infoObject" *ngIf="infoObjectWindow.open"></app-info-object>
+<app-info-object [info_object]="infoObject" (closeWindow)="infoObjectWindow.open = false" *ngIf="infoObjectWindow.open"></app-info-object>
 
 <div class="spotbie-map-search-wrapper">
 
@@ -186,7 +186,7 @@
     </tr>
   </table>-->
 
-  <div class='spotbie-search-results-title' *ngIf="search_category == 'shopping' || search_category == 'food'">
+  <div class='spotbie-search-results-title' *ngIf="type_of_info_object == 'yelp_business'">
     Max Distance  <mat-slider min="0" max="25" step="1" value="{{ maxDistance }}"
                             (change)="updateDistance($event)"></mat-slider>
     {{ maxDistance }} miles.                            
