--- a/src/app/spotbie/my-favorites/my-favorites.component.css
+++ b/src/app/spotbie/my-favorites/my-favorites.component.css
@@ -14,3 +14,8 @@
 .spotbie-favoriteItemTitle{
     position: relative;
 }
+.spotbie-search-result{
+    height: unset;
+    min-height: unset;
+    max-height: unset;
+}
