--- a/src/app/spotbie/my-favorites/my-favorites.component.css
+++ b/src/app/spotbie/my-favorites/my-favorites.component.css
@@ -19,3 +19,10 @@
     min-height: unset;
     max-height: unset;
 }
+.spotbie-no-notis-box{
+    position: fixed;
+    top: 50%;
+    width: 100%;
+    min-width: 100%;
+    transform: translateY(-50%);
+}
