--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
@@ -2,7 +2,9 @@
 
 <div class="spotbie-overlay-window">
 
-  <div class="spotbie-close-button" (click)="closeWindow()">close</div>
+  <div class="spotbie-close-button" (click)="closeWindow()">
+    <i class="fa fa-times"></i>
+  </div>
 
   <div class="spotbie-no-repeat-bg-contain
               spotbie-margin
