--- a/src/app/spotbie/read-about/read-about.component.html
+++ b/src/app/spotbie/read-about/read-about.component.html
@@ -14,7 +14,7 @@
 
                     <a href="/home#places-to-eat" class="xfDs" rel="tag">places to eat</a>,
 
-                    and <a href="/home#events" class="xfDs" rel="tag">events</a>.
+                    and <a href="/home#events" class="xfDs" rel="tag">events</a>..
 
                 </p>
 
